--- a/index.html
+++ b/index.html
@@ -2,24 +2,66 @@
 <html>
 
 <head>
-
+  <script>
+    function init() {
+      //Find our div containers in the DOM
+      var dataContainerOrientation = document.getElementById('dataContainerOrientation');
+      var dataContainerMotion = document.getElementById('dataContainerMotion');
+ 
+      //Check for support for DeviceOrientation event
+      if(window.DeviceOrientationEvent) {
+        window.addEventListener('deviceorientation', function(event) {
+                var alpha = event.alpha;
+                var beta = event.beta;
+                var gamma = event.gamma;
+ 
+                if(alpha!=null || beta!=null || gamma!=null) 
+                  dataContainerOrientation.innerHTML = 'alpha: ' + alpha + '<br/>beta: ' + beta + '<br />gamma: ' + gamma;
+              }, false);
+      }
+ 
+      // Check for support for DeviceMotion events
+      if(window.DeviceMotionEvent) {
+      window.addEventListener('devicemotion', function(event) {
+                var x = event.accelerationIncludingGravity.x;
+                var y = event.accelerationIncludingGravity.y;
+                var z = event.accelerationIncludingGravity.z;
+                var r = event.rotationRate;
+                var html = 'Acceleration:<br />';
+                html += 'x: ' + x +'<br />y: ' + y + '<br/>z: ' + z+ '<br />';
+                html += 'Rotation rate:<br />';
+                if(r!=null) html += 'alpha: ' + r.alpha +'<br />beta: ' + r.beta + '<br/>gamma: ' + r.gamma + '<br />';
+                dataContainerMotion.innerHTML = html;                  
+              });
+      }
+    }   
+    </script>
   <meta charset="UTF-8">
 
   <title>TESTE DO ORIDOMI</title>
 
   <link rel="stylesheet" href="css/reset.css">
 
-    <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 
 </head>
 
-<body>
+<body onload="init()">
+  <div id="dataContainerOrientation">
+    No device orientation data
+  </div>
+  <div id="dataContainerMotion">
+    No device motion data
+  </div>
 
   <div class= "paper"> 
     <div class="overlay">
     
     </div>
   </div>
+
+
+
 
   <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
   <script src='https://rawgithub.com/dmotz/oriDomi/master/oridomi.min.js'></script>
@@ -29,3 +71,6 @@
 </body>
 
 </html>
+
+
+
